--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^9.19.1",
+    "marked-react": "^1.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
